--- a/mavenproject1/ProjetoPrimafacesMaven/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
+++ b/mavenproject1/ProjetoPrimafacesMaven/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
@@ -6,7 +6,7 @@
 
 	<p:toolbar style="margin-top: 20px">
   		<p:toolbarGroup>
-  			<p:button value="Novo" outcome="/pedidos/CadastroPedido"/>
+  			<p:button value="Novo" />
   			<p:commandButton value="Salvar" />
   		</p:toolbarGroup>
   		
@@ -17,7 +17,7 @@
   			
   			<p:separator/>
   		
-  			<p:button value="Pesquisa" outcome="/pedidos/PesquisaPedidos" />
+  			<p:button value="Pesquisa" />
   		</p:toolbarGroup>
   	</p:toolbar>
   	
